@@ -83,6 +83,9 @@ permissions:
   mcbans.kick:
     description: Permission to use kick command
     default: op
+  mcbans.kick.exempt:
+    description: Permission to exempt from kicks
+    default: op
   mcbans.lookup.player:
     description: Permission to use lookup command
     default: op
